# spacedrive

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml  config.toml.mustache
.github/actions/publish-artifacts/: package.json
.github/workflows/: crypto.yml
_/: JS  RUST
apps/cli/: Cargo.toml
apps/desktop/: package.json
apps/desktop/src/: App.tsx  commands.ts  platform.ts  query.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  menu.rs  updater.rs
apps/landing/: package.json
apps/landing/src/app/: Footer.tsx
apps/landing/src/app/Downloads/: Platform.tsx  index.tsx
apps/landing/src/app/NavBar/: MobileDropdown.tsx  index.tsx
apps/landing/src/app/team/: TeamMember.tsx
apps/landing/src/components/: Footer.tsx  NavBar.tsx
apps/landing/src/utils/: util.ts
apps/mobile/: package.json
apps/mobile/src/components/explorer/: FileThumb.tsx
apps/mobile/src/components/icons/: FolderIcon.tsx  Icon.tsx
apps/mobile/src/components/job/: JobGroup.tsx
apps/mobile/src/navigation/: index.tsx
apps/mobile/src/screens/onboarding/: GetStarted.tsx
apps/storybook/: package.json
apps/storybook-solid/: package.json  tsconfig.json  vite.config.ts
apps/storybook-solid/.storybook/: main.ts  preview.ts
apps/web/: astro.config.mjs  package.json  tsconfig.json
apps/web-astro/: astro.config.mjs  package.json  tailwind.config.mjs
apps/web-astro/src/: Page.tsx  Platform.tsx  Wrapper.tsx  cache.tsx  patches.ts  rspc.tsx  useClientContext.tsx  useLibraryContext.tsx  useTheme.ts
apps/web-astro/src/Explorer/: Context.tsx  createExplorer.ts  index.tsx  store.ts  useExplorer.ts  util.ts
apps/web-astro/src/Explorer/FilePath/: LayeredFileIcon.tsx  RenameTextBox.tsx  Thumb.tsx  TruncateMarkup.tsx  TruncateMarkupReact.tsx
apps/web-astro/src/Explorer/View/: Context.tsx  RenameItemText.tsx  ViewItem.tsx  index.tsx
apps/web-astro/src/Explorer/queries/: createExplorerInfiniteQuery.ts  createExplorerQuery.ts  createPathsExplorerQuery.ts  createPathsInfiniteQuery.ts
apps/web-astro/src/pages/: index.astro
apps/web/src/: App.tsx  index.tsx
apps/web/src/pages/: index.astro
core/: Cargo.toml  build.rs  knowledge.sh  spacedrive-core-knowledge.txt
core/crates/sync/: Cargo.toml
core/prisma/: schema.prisma
core/prisma/migrations/20230730000815_key_manager/: migration.sql
core/prisma/migrations/20230730003552_key_id_on_fp/: migration.sql
core/prisma/migrations/20230821231338_migrations/: migration.sql
core/src/: lib.rs  main.rs  prisma.rs  prisma_sync.rs
core/src/api/: files.rs  jobs.rs  libraries.rs  locations.rs  notifications.rs
core/src/api/search/: mod.rs  saved.rs
core/src/crypto/: keymanager.rs  mod.rs
core/src/job/: mod.rs  modern.rs  worker.rs
core/src/location/: file_path_helper.rs  mod.rs  non_indexed.rs
core/src/location/indexer/: indexer_job.rs  mod.rs
core/src/location/manager/: helpers.rs  mod.rs
core/src/object/file_identifier/: file_identifier_job.rs
core/src/object/fs/: copy.rs  cut.rs  delete.rs  encrypt.rs  erase.rs  error.rs  mod.rs
core/src/object/media/: media_data_extractor.rs
core/src/object/media/media_processor/: job.rs  mod.rs
core/src/object/preview/thumbnail/: mod.rs  thumbnailer_job.rs
core/src/object/validation/: validator_job.rs
core/src/p2p/: p2p_manager.rs  peer_metadata.rs
core/src/p2p/pairing/: initial_sync.rs
core/src/preferences/: library.rs
core/src/sync/: manager.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/benches/hashing/: argon2id.rs  blake3-balloon.rs
crates/crypto/examples/: file_encryption.rs
crates/crypto/src/: ct.rs  encrypted.rs  error.rs  hashing.rs  hex.rs  lib.rs  primitives.rs  protected.rs  rng.rs  types.rs  utils.rs
crates/crypto/src/crypto/: mod.rs  stream.rs
crates/crypto/src/encoding/: hex.rs
crates/crypto/src/encoding/file/: mod.rs
crates/crypto/src/rng/: mod.rs
crates/crypto/src/rng/csprng/: apple.rs  chacha20.rs  mod.rs
crates/crypto/src/sys/fs/: erase.rs
crates/crypto/src/sys/keyring/: identifier.rs  ios.rs  linux_keyutils.rs  mod.rs  session.rs
crates/crypto/src/sys/keyring/apple/: ios.rs  macos.rs
crates/crypto/src/sys/keyring/linux/: keyutils.rs  secret_service.rs
crates/crypto/src/vault/: mod.rs  persistent.rs
crates/file-ext/src/: extensions.rs
crates/httpz/: Cargo.toml  README.md
crates/httpz/src/servers/: mod.rs
crates/images/: Cargo.toml
crates/images/src/: consts.rs
crates/location-watcher/: Cargo.toml
crates/location-watcher/src/: event.rs  lib.rs  linux.rs  macos.rs
crates/p2p2/examples/: a.rs  aa.rs  b.rs  bb.rs
crates/p2p2/src/quic/: mod.rs  transport.rs
crates/prisma/src/: prisma.rs  prisma_sync.rs
crates/rspc/: Cargo.toml  README.md
crates/rspc/src/: error.rs  resolver_result.rs  router.rs  router_builder.rs
crates/rspc/src/alpha/: router.rs
crates/rspc/src/alpha_stable/: resolver_function.rs  resolver_result.rs
crates/rspc/src/integrations/: tauri.rs
crates/utils/src/: hardware.rs  lib.rs
docs/: .gitignore  knowledge.sh
docs/product/guides/: actions.mdx
interface/: .eslintrc.js  index.tsx  package.json
interface/app/: style.scss
interface/app/$libraryId/: ephemeral.tsx  index.tsx  media.tsx  recents.tsx  statistics.tsx
interface/app/$libraryId/Explorer/: OptionsPanel.tsx  index.tsx  store.ts
interface/app/$libraryId/Explorer/View/: index.tsx  (+1 more)
interface/app/$libraryId/Layout/: CMDK.scss  CMDK.tsx  index.tsx
interface/app/$libraryId/Search/: index.tsx  util.tsx
interface/app/$libraryId/TopBar/: TopBarMobile.tsx
interface/app/$libraryId/saved-search/: $id.tsx
interface/app/$libraryId/settings/: Sidebar.tsx
interface/app/$libraryId/statistics/: FileKindStatistics.tsx  HorizontalScroll.tsx  index.tsx
interface/app/onboarding/: Layout.tsx  alpha.tsx  full-disk.tsx  login.tsx
interface/app/p2p/: Spacedrop.tsx
interface/components/: Accordion.tsx  Folder.tsx  GridList.tsx  Icon.tsx  Sparkles.tsx
interface/hooks/: index.ts  useFormWatch.ts
scripts/: package.json
scripts/utils/: patchTauri.mjs
(+29 files in other folders)
