[workspace]
resolver = "2"
members = [
	"core",
	"core/crates/*",
	"crates/*",
	# "crates/p2p/tunnel",
	# "crates/p2p/tunnel/utils",
	"apps/cli",
	"apps/desktop/src-tauri",
	"apps/desktop/crates/*",
	"apps/mobile/modules/sd-core/core",
	"apps/mobile/modules/sd-core/android/crate",
	"apps/mobile/modules/sd-core/ios/crate",
	"apps/server",
]

[workspace.package]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/spacedriveapp/spacedrive"

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/spacedriveapp/prisma-client-rust", rev = "9f8ac122e8f2b2e4957b71f48a37e06565adba40", features = [
	"rspc",
	"sqlite-create-many",
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/spacedriveapp/prisma-client-rust", rev = "9f8ac122e8f2b2e4957b71f48a37e06565adba40", features = [
	"rspc",
	"sqlite-create-many",
	"migrations",
	"sqlite",
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/spacedriveapp/prisma-client-rust", rev = "9f8ac122e8f2b2e4957b71f48a37e06565adba40", features = [
	"sqlite",
], default-features = false }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

rspc = { version = "0.1.4" }
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "673e3f55d246cd90e70c706ba4ca7f5818e99ba9" }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", rev = "71c4054d184c5f4a5336a4dcd4f779050f445d13" }

swift-rs = { version = "1.0.6" }

tokio = { version = "1.34.0" }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

[patch.crates-io]
# Proper IOS Support
if-watch = { git = "https://github.com/oscartbeaumont/if-watch.git", rev = "f732786057e57250e863a9ea0b1874e4cc9907c2" }

# Beta features
rspc = { git = "https://github.com/spacedriveapp/rspc.git", rev = "6b7caa5bfd44888ce5145a8607eb490a4f142c29" }
