[package]
name = "sd-crypto"
version = "0.0.0"
authors = ["Jake Robinson <jake@spacedrive.com>"]
keywords = ["crypto"]
readme = "README.md"
description = """
A cryptographic library that provides safe and high-level
encryption, hashing, and encoding interfaces.
"""
rust-version = "1.67.0"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "dep:serde-big-array"]
bincode = ["dep:bincode"]
keyring = ["dep:linux-keyutils", "dep:security-framework"]
secret-service = [
  "keyring",
  "dep:secret-service",
] # explicit enabling required as it's a mess
async = ["dep:tokio"]
specta = ["dep:specta"]


[dependencies]
# rng
rand = "0.8.5"
rand_chacha = "0.3.1"

# hashing
argon2 = { version = "0.5.2", default_features = false, features = ["zeroize"] }
balloon-hash = { version = "0.4.0", default_features = false, features = [
  "zeroize",
] }
blake3 = { version = "1.4.1", features = ["traits-preview"] }

# constant time - custom git until https://github.com/RustCrypto/utils/pull/925
cmov = { git = "https://github.com/brxken128/utils", rev = "e53d8f068fa2420a016d9dfdc7e6cd9b1a7fec87" }

# aeads
aes-gcm = "0.10.2"
aes-gcm-siv = "0.11.1"
chacha20poly1305 = "0.10.1"
aead = { version = "0.5.2", features = ["stream"] }

# cryptographic hygiene
# `aarch64` feature allows zeroizing of SIMD registers
# a no-op on non-aarch64 targets
zeroize = { version = "1.6.0", features = ["derive", "aarch64"] }

# error handling
thiserror = "1.0.48"

bincode = { version = "2.0.0-rc.3", optional = true }

serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.94", optional = true }
serde-big-array = { version = "0.5.1", optional = true }

specta = { workspace = true, optional = true }

hex = "0.4.3"

# for asynchronous crypto
tokio = { workspace = true, features = [
  "io-util",
  "rt-multi-thread",
  "macros",
], optional = true }

# linux OS keyring
[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils = { version = "0.2.3", features = ["std"], optional = true }
secret-service = { version = "3.0.1", optional = true }

# macos/ios OS keyring
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = { version = "2.9.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.14"

[[bench]]
name = "aes-256-gcm"
path = "benches/crypto/aes-256-gcm.rs"
harness = false

[[bench]]
name = "aes-256-gcm-siv"
path = "benches/crypto/aes-256-gcm-siv.rs"
harness = false

[[bench]]
name = "xchacha20-poly1305"
path = "benches/crypto/xchacha20-poly1305.rs"
harness = false

[[bench]]
name = "argon2id"
path = "benches/hashing/argon2id.rs"
harness = false
bench = false

[[bench]]
name = "blake3-balloon"
path = "benches/hashing/blake3-balloon.rs"
harness = false
bench = false

[[bench]]
name = "blake3"
path = "benches/hashing/blake3.rs"
harness = false

[[bench]]
name = "blake3-kdf"
path = "benches/hashing/blake3-kdf.rs"
harness = false

[[example]]
name = "file_encryption"
path = "examples/file_encryption.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
