[package]
name = "sd-location-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
async-trait = "0.1.68"
futures-concurrency = "7.2.0"
notify = { version = "5.1.0", features = ["macos_fsevent"] }
thiserror = "1.0.40"
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tokio-stream = { version = "0.1.12", features = ["time"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
uuid = "1.3.0"
